--- a/src/app/core/components/toolbar/toolbar.component.html
+++ b/src/app/core/components/toolbar/toolbar.component.html
@@ -3,9 +3,9 @@
     <span>Simple login app</span>
     <span class="spacer"></span>
     <button mat-button routerLink="/">Home</button>
-    <button mat-button routerLink="/login" *ngIf="!appService.isAuthenticated">Login</button>
-    <button mat-button *ngIf="appService.isAuthenticated" (click)="appService.logout()">Logout</button>
-    <button mat-button routerLink="/profile">Profile</button>
-    <button mat-button routerLink="/dashboard">Dashboard</button>
+    <button mat-button routerLink="/login" *ngIf="!authService.isAuthenticated">Login</button>
+    <button mat-button *ngIf="authService.isAuthenticated" (click)="authService.logout()">Logout</button>
+    <button mat-button routerLink="/profile" *ngIf="authService.isAuthenticated">Profile</button>
+    <button mat-button routerLink="/dashboard" *ngIf="authService.isAuthenticated">Dashboard</button>
   </mat-toolbar>
 </p>
